--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,37 +120,109 @@ a {
         transform: translateY(-8px) rotate(-45deg);
     }
 
+    .desc-caroussel p{
+        text-align: center;
+        color: #101010;
+        font-family: 'Permanent Marker', cursive;
+        font-size: large;
+    }
+
+    .img-caroussel{
+        height: auto;
+        width: 70%;
+        margin-top: 14%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .desc-caroussel{
+        height: 42%;
+        width: 80%;
+        margin-top: 10%;
+        margin-right: auto;
+        margin-left: auto;
+        border-radius: 20%;
+        background-color: #fff;
+        align-content: center;
+    }
+
+    .sect-1{
+        display: block;
+    }
+
+    .section-head h1{
+        width: 20%;
+        border-radius: 25px;
+        font-size: 18px;
+        background-color: white;
+        color: black;
+    }
+
+    .rarity-div-rank h2{
+        width: 20%;
+        margin-left: 40%;
+        border-radius: 25px;
+        font-size: 18px;
+        background-color: white;
+        color: black;
+    }
+
+}
+
+@media only screen and (min-width: 768px) {
+    .desc-caroussel p{
+        text-align: center;
+        font-size: x-large;
+        color: #101010;
+        font-family: 'Permanent Marker', cursive;
+    }
+
+    .img-caroussel{
+        height: 600px;
+        width: 600px;
+        margin-left: 10%;
+        margin-top: 10%;
+    }
+
+    .desc-caroussel{
+        height: 500px;
+        width: 600px;
+        margin-left: 10%;
+        margin-top: 12%;
+        border-radius: 20%;
+        background-color: #fff;
+        align-content: center;
+    }
+
+    .section-head h1{
+        width: 20%;
+        border-radius: 25px;
+        font-size: 30px;
+        background-color: white;
+        color: black;
+    }
+
+    .rarity-div-rank h2{
+        width: 20%;
+        margin-left: 40%;
+        border-radius: 25px;
+        font-size: 30px;
+        background-color: white;
+        color: black;
+    }
+
 }
 
 
-.img-caroussel{
-    height: 600px;
-    width: 600px;
-    margin-left: 10%;
-    margin-top: 10%;
-}
 
 .img-caroussel img{
     height: 100%;
     width: 100%;
 }
 
-.desc-caroussel{
-    height: 500px;
-    width: 600px;
-    margin-left: 10%;
-    margin-top: 12%;
-    border-radius: 20%;
-    background-color: #fff;
-    align-content: center;
-}
 
-.desc-caroussel p{
-    text-align: center;
-    font-size: x-large;
-    color: #101010;
-    font-family: 'Permanent Marker', cursive;
-}
+
+
 
 #root{
     width: 100%;
@@ -170,7 +242,6 @@ a {
     color: darkviolet;
 }
 .remaining-li{
-    margin-right: 20.0rem;
     font-size: 2.1rem;
 
 }
@@ -186,9 +257,6 @@ a {
 
 .rarity-sect{
     background-color: white;
-    /*border-top-left-radius: 20%;
-    border-top-right-radius: 20%;
-    opacity: 75%;*/
     text-align: center;
     display: block;
     height: auto;
@@ -205,13 +273,7 @@ a {
     
 }
 
-.section-head h1{
-    width: 20%;
-    border-radius: 25px;
-    font-size: 30px;
-    background-color: white;
-    color: black;
-}
+
 
 .rarity-div-rank{
     height: 50%;
@@ -225,14 +287,7 @@ a {
     background-color: #fef5ff;
 }
 
-.rarity-div-rank h2{
-    width: 20%;
-    margin-left: 40%;
-    border-radius: 25px;
-    font-size: 30px;
-    background-color: white;
-    color: black;
-}
+
 
 .myGallery {
 display: grid;
